--- a/MovieLibraryEntities/appsettings.json
+++ b/MovieLibraryEntities/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "MovieContext": "Server=bitsql.wctc.edu;Database=MovieLibrary_20024_lgriswold1;User ID=lgriswold1;Password=000578150;"
+    "MovieContext": "Server=x;Database=x;User ID=x;Password=x;"
   }
 }
