--- a/Griswold-A4-Movie-Library-Assignment/Griswold-A4-Movie-Library-Assignment.csproj
+++ b/Griswold-A4-Movie-Library-Assignment/Griswold-A4-Movie-Library-Assignment.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,6 +6,7 @@
     <RootNamespace>Griswold_A4_Movie_Library_Assignment</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <StartupObject>Griswold_A4_Movie_Library_Assignment.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
