--- a/MovieLibraryEntities/appsettings.json
+++ b/MovieLibraryEntities/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "MovieContext": "Server=x;Database=x;User ID=x;Password=x;"
+    "MovieContext": "Server=x;Database=MovieLibrary_x;User ID=x;Password=x;"
   }
 }
